# ASVK_development_on_linux

01_TerminalProject/: Makefile  Show  Show.c
02_Multifile/: Makefile  fun.c  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  debug1.gdb  debug2.gdb  range.c  t2_perfect.out
05_Regexps/: Makefile  esub.c
07_Environmental/: Makefile.am  configure.ac
07_Environmental/src/: hh.c  rhash.c
08_I18n/: COPYING  configure.ac
08_I18n/po/: Makefile.am  ru.po
08_I18n/src/: Makefile.am  guess.c
09_PatchDiff/: 01.patch  02.patch  03.patch  Makefile  a.out  labirinth.c  labitinth.c~
11_Documenting/: COPYING  Makefile.am  configure.ac
11_Documenting/src/: guess.c
12_InstallPackaging/: Doxyfile.in  Makefile.am  configure.ac
12_InstallPackaging/lib/: Makefile.am  libguess.c  libguess.h
12_InstallPackaging/po/: Makefile.am  ru.po
12_InstallPackaging/src/: Makefile.am  guess.c
12_InstallPackaging/tests/: Makefile.am  dummy.ts
